  - added trackball mouse handler
  - added z-distance sorted rendering of alpha-blended faces 
  - added gl2ps patch ( contributed by Albrecht Gebhard )
  - added port: native Mac OS X Carbon
  - bugfix: rgl.close() , rgl.quit() crashed on X11 occasionally.
  - generalized rgl.surface() to allow surface over any coordinate plane.
  - added r3dDefaults variable to allow user to set defaults
  - added environment texture-mapping

v0.66
  - added "all" and "viewpoint" to rgl.clear and clear3d
  - added static libpng build support and user customizable prefix (unix)
  - used xyz.coords in all functions taking x, y, z coordinates, allowing
    matrix or dataframe arguments (among others)
  - added par3d(skipRedraw=TRUE) to allow drawing to be done without
    being rendered
  - fixed display list memory leak when drawing shapes (e.g. spheres)
  - Changes for compatibility with strict enforcement of file naming rules in R 2.3.0.

v0.66-2
  - added support for png files with palettes, and grayscale pngs with 1, 2 or 4 bits 
    per pixel
  - added "ignoreExtent" option to par3d:  objects plotted when this is true
    are ignored when calculating the bounding box
  - added axis3d, axes3d, box3d, mtext3d, title3d functions from djmrgl for 
    annotating plots.
  - added plot3d high level plot function
  - added material3d, which can both set and query material properties; changed
    most *3d functions so they leave material invariant across calls.
  - changed open3d() to set background and material defaults
  - added aspect3d to control the aspect ratio of the bounding box.
  - added xAxis, yAxis and zAxis mouse modes, set zAxis as r3d default.
  - added persp3d function
  - changed error messages to go through REprintf in X11 and OSX
  - fixed segfault if rgl_init failed
  - converted type of viewport arg in user2window and window2user calls
  - if the rgl_init call fails, the package will still load with a warning (but
    most function calls will result in errors).
  